Update for handle correct visualization.